RESULTS/AutoSpec/raw_results/out-4o-oopsla-mx/out/09_0004/09_merged.txt
/home/dimpling/AutoSpec/out/09_0004/09_merged.c:42:3: error: unterminated comment
   42 |   /* For the final while loop */;
      |   ^
